UF-7921 - AbstractAppTest - service path using UriBuilder (#293)
Adds an overload of the withServicePath method to be able to use a UriBuilder
a la WebTestClient. May be useful when constructing complex paths.